example/lib/src/arbs/errors/app_km.arb
{
  "@@locale": "km",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "មានកំហុសមួយកើតឡើង",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "មានកំហុសមិនគ្រាន់កន្លែងមួយ",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "របាយការណ៍កំហុសត្រូវបានផ្ញើដោយជោគជ័យ។",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}